libs/node/test/data/SMSHOME2/good/good1.ecf
 #============================================================
# test for include included twice. 
# This is not a recursive include
#=========================================================
%include <head.h>
%include <head.h>
 