libs/node/test/data/SMSHOME2/bad/recursive_include2.ecf
# test for recursive includes
%include <a.h>

# a.h -> b.h -> d.h
#               e.h -> b.h
#        c.h